--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,5 +37,6 @@
     "source.organizeImports": true
   },
   "editor.formatOnSave": true,
-  "editor.formatOnPaste": true
+  "editor.formatOnPaste": true,
+  "terminal.integrated.defaultProfile.windows": "Git Bash"
 }
